--- a/css/index.css
+++ b/css/index.css
@@ -11,7 +11,7 @@
     position: absolute;
     top: 1em;
     right: 0;
-    height: 520px;
+    min-height: 520px;
     background-color: white;
     width: 300px;
     visibility: hidden;
@@ -38,5 +38,12 @@
 #panel .dateTimeWrapper {
     display: none;
 }
+#panel input[type="text"],
+#panel select,
+#panel textarea{
+    display: block;
+    margin: 6px 0;
+}
+
 
 
